--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,7 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: none;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url('./pictures/Logo.png');
 }
 
 code {
